# wakatiwai

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
docs/tlh/: README.md  tests.md
drivers/: compile_drivers.sh  driverlist  new_driver.sh
drivers/boot/: default_main.rs
drivers/boot/UEFI/: Cargo.toml
drivers/boot/UEFI/src/: main.rs
drivers/fs/: default_config.toml  default_main.rs
drivers/fs/FAT/: Cargo.toml
drivers/fs/FAT/src/: main.rs
drivers/fs/FAT/src/data/: mod.rs
scripts/: install  mkdriver  probe
setup/: setup-arch.sh
springboard/: Cargo.toml
springboard/src/: boot_driver.rs  disk.rs  driver.rs  fs_driver.rs  io.rs  lib.rs
springboard/src/boot/: mod.rs
springboard/src/driver/: mod.rs
springboard/src/fs/: mod.rs
springboard/src/wakatiwai/: locate.rs  mod.rs
src/: main.rs
src/block/: device.rs
src/blockdev/: device.rs  gpt.rs  mbr.rs  mod.rs
src/boot/: boot.rs  efi.rs  elf.rs  linux.rs  mod.rs  partition.rs  read.rs
src/boot/linux/: mod.rs  structures.rs
src/dev/: gpt.rs  mbr.rs  mod.rs  reader.rs
src/editor/: banner.rs  cursor.rs  display.rs  edit.rs  mod.rs
src/fs/: mod.rs
src/fs/fat/: mod.rs
src/fs/fat/fat12_16/: data.rs  disk.rs  mod.rs
src/fs/fat/fat32/: data.rs  disk.rs  mod.rs
src/wtcore/: alloc.rs  boot.rs  config.rs  menu.rs  mod.rs  panic.rs  print.rs  shell.rs
src/wtcore/config/: load.rs  mod.rs  parse.rs  write.rs
tests/: README.md  arch.json  arch.wtprof  eisen.json  eisen.wtprof  hello-uefi.efi  run.sh  test.json  wakatiwai.sh
tests/core/: fdisk_gpt_table.md  image_fdisk.awk  image_fdisk.sh  image_size.awk  image_size.sh  run.sh  wakatiwai.sh
(+5 files in other folders)
