[package]
name = "wakatiwai"
version = "0.4.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false }
crc = "3.2.1"
microjson = "0.1.6"
spin = { version = "0.9.8", features = ["rwlock"] }
uefi = { version = "^0.34", features = ["alloc", "global_allocator"] }
uefi-raw = "^0.10"
wakatiwai-udive = "^0.1"

[profile.release]
opt-level = "z"
debug = false
strip = "none"
debug-assertions = false
overflow-checks = true
lto = true
panic = "unwind"
incremental = false
